--- a/Юрин курсач/Юрин курсач/Юрин курсач.vcxproj
+++ b/Юрин курсач/Юрин курсач/Юрин курсач.vcxproj
@@ -126,6 +126,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="draw.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -213,6 +214,9 @@
   </ItemGroup>
   <ItemGroup>
     <Font Include="text.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="help.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
