still in progress

--- a/Юрин курсач/Юрин курсач/Юрин курсач.vcxproj.filters
+++ b/Юрин курсач/Юрин курсач/Юрин курсач.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="draw.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="maths.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\FON1.bmp">
