--- a/Юрин курсач/Юрин курсач/Юрин курсач.vcxproj
+++ b/Юрин курсач/Юрин курсач/Юрин курсач.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="maths.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\FON1.bmp" />
